assets/css/custom-style.css
/* ... */
.autocomplete-wrapper input::placeholder {
  color: #1c3659;
}
.autocomplete-wrapper input:focus {
  outline: 0;
}
.t-check-in .t-date-info-title,
.t-check-out .t-date-info-title {
  position: static;
}
.departure-cities .departure-city-item .t-dates label {
  color: #1c3659;
  font-size: 15px;
  opacity: 1;
  margin-bottom: 0;
  position: relative !important;
  top: 0;
  left: 0;
}
.autocomplete-result > div {
  width: 80%;
}
.autocomplete-results b {
  color: #1c3659;
  position: absolute;
  right: 20px;
  border: 1px solid;
  margin: 0;
  padding: 2px 5px;
  font-size: 14px;
  line-height: 16px;
}
.travelars .content {
  color: #1c3659;
}
.t-hover-day-content {
  display: none;
}
.t-today::after {
  display: none;
}
.checkin-block,
.checkout-block {
  float: left;
  width: 50%;
  text-align: center;
  position: relative !important;
  height: 48px !important;
}
.only-checkin .checkin-block {
  width: 100%;
}
.checkin-block .t-check-in,
.checkout-block .t-check-out {
  width: 100%;
}
label.departure-lable {
  margin: 0 0 0 0;
  line-height: 14px;
  position: relative;
  top: 10px;
  font-size: 15px;
}
.code {
  color: #1c3659;
  font-size: 15px;
}
.departure-dates-main .departure-cities {
  width: 250px;
  max-width: 250px;
  display: flex;
  justify-content: space-between;
  height: 62px;
}

.t-check-in,
.t-check-out {
  border: none !important;
}

.flights-flying .flight-accordion button.flight-btn {
  color: rgb(28, 54, 89);
  text-align: center;
  width: 100%;
  position: relative;
  border: none;
  background: none;
  padding: 0.9rem 1rem 0;
}
.flights-flying .flight-accordion button.flight-btn:after,
.flights-flying .flight-accordion button.flight-btn:before {
  position: absolute;
  content: "";
  background: rgb(221, 182, 81);
  width: 35%;
  height: 2px;
  left: 0;
  top: 25px;
}
.flights-flying .flight-accordion button.flight-btn:after {
  left: auto;
  right: 0;
}
.flights-flying-text .blue-btn,
.passenger-detail-button {
  color: #fff;
  display: inline-block;
  text-align: center;
  font-size: 14px;
  line-height: 14px;
  padding: 10px 15px;
  text-decoration: none;
  border-radius: 40px;
  border: none;
  background-color: #1c3659;
  box-shadow: 0 0 0 2px #1c3659 inset;
}
.search-page-search-bar {
  float: left;
  width: 100%;
  padding: 20px 0 0;
}
.search-page-search-bar .modify-search-btn a {
  color: #fff;
  display: inline-block;
  text-align: center;
  font-size: 14px;
  line-height: 14px;
  padding: 10px 15px;
  text-decoration: none;
  border-radius: 40px;
  border: none;
  background-color: #1c3659;
  box-shadow: 0 0 0 2px #1c3659 inset;
}
.flights-flying-text .blue-btn:hover {
  color: #1c3659;
  background: none;
}
#phoneNumber1 {
  padding-left: 90px !important;
}
.iti {
  width: 100%;
}
ul#iti-0__country-listbox {
  background: #fff;
  position: relative;
  z-index: 999;
}
ul#iti-0__country-listbox li {
  width: 100% !important;
}
/* ***************** Travelars Dropdown ***************** */
.travelars {
  width: 50%;
  text-align: center;
  padding: 10px 15px;
  color: #1c3659;
  font-size: 15px;
}
.travelers-detl {
  position: absolute;
  top: 106%;
  background: #fff;
  left: 0;
  right: 0;
  border-radius: 6px;
  padding: 10px;
  display: none;
  z-index: 2;
}
.travelers-detl p {
  color: #000;
  font-size: 17px;
  border-bottom: 1px solid #dedfe0;
  margin: 8px 0;
}
.travel-detl-item {
  padding: 8px 0;
  display: flex;
  justify-content: space-between;
}
.travel-detl-item p {
  border: 0;
  font-size: 15px;
  margin: 0;
}
.travel-detl-item span {
  color: #999;
  font-size: 13px;
}
.travl-class {
  padding: 8px 0;
}
.travl-class button {
  color: #afafaf;
  border: 1px solid #afafaf;
  background-color: #fff;
  padding: 5px;
  text-align: center;
  text-decoration: none;
  font-size: 11px;
  border-radius: 30px;
  width: 74px;
  font-weight: 400;
}
.travl-class button.active,
.travl-class button:hover {
  color: #232323;
  background-color: #f4f8fb;
}
.travel-dropdown-apply {
  background: #1c3659;
  color: #fff;
  border: none;
  width: 100%;
  border-radius: 30px;
  margin: 10px 0 0;
  padding: 6px 0;
}
.plus-minus-input-group {
  width: 100px;
  display: flex;
  align-items: center;
}
.input-group-btn a {
  border-radius: 50%;
  width: 22px;
  height: 22px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 15px;
  border: 1px solid #444;
  color: #444;
}
.plus-minus-counter {
  background: transparent !important;
  border: 0;
  width: 50px;
  text-align: center;
  color: rgb(138, 137, 137);
}
.plus-minus-counter:focus {
  box-shadow: none;
}
.t-datepicker-days .t-table-wrap {
  color: #1c3659;
}
.t-table-condensed td,
.t-table-condensed th {
  display: inline-block;
  width: 43px;
  height: 43px;
  border-radius: 50%;
}
.t-datepicker-days .t-table-wrap .t-month {
  width: 60%;
}
.t-datepicker-days .t-check-in .t-end-limit,
.t-datepicker-days .t-disabled {
  opacity: 0.7;
}
.t-datepicker-days .t-today,
.t-datepicker-days .t-today .t-hover-day-content {
  background: #1c3659;
}
.departure-city-item span {
  color: #1c3659;
}
/* ******** Class Select ********  */
a.button {
  display: inline-block;
  width: 100px;
  height: 50px;
  background-color: blue;
  color: #fff;
  line-height: 50px;
  text-align: center;
  text-decoration: none;
}

div[class*="content-"] {
  display: none;
}

div.active {
  display: block;
}
/****************************************************************************************************/
/****************************************************************************************************/
/****************************************************************************************************/
/* ************ Flight Search Section ************* */
.flight-search-page-banner {
  width: 100%;
  background: #fff;
  margin-top: 98px;
  height: 85px;
}
/* ... */

